change db mysql -> postgresql

--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -23,14 +23,15 @@ homepage:
         service_3:
             title: 'Оформяне на брада'
             description: 'Експертно подстригване, оформяне и грижа за брадата, която перфектно допълва вашия външен вид.'
-        booking:
-            title_1: 'Запази без акаунт'
-            title_2: 'Запази час'
-            description: 'Не е необходима регистрация - просто попълнете вашите данни и изберете час!'
-            email: 'Ще получите потвърждение по имейл с подробности за вашата резервация'
-            manage: 'Управлявайте вашата резервация чрез линка в имейла (отмяна или пренасрочване)'
-            track_description: 'Искате ли да следите вашите резервации?'
-            track_button: 'Създайте акаунт'
+    booking:
+        title_1: 'Запази без акаунт'
+        title_2: 'Запази час'
+        description: 'Не е необходима регистрация - просто попълнете вашите данни и изберете час!'
+        email: 'Ще получите потвърждение по имейл с подробности за вашата резервация'
+        manage: 'Управлявайте вашата резервация чрез линка в имейла (отмяна или пренасрочване)'
+        track_description: 'Искате ли да следите вашите резервации?'
+        track_button: 'Създайте акаунт'
+        book_now_button: 'ЗАПАЗИ СЕГА!'
 
 
 # base_iframe.html.twig
@@ -144,6 +145,17 @@ register:
     have_account: 'Вече имате профил?'
     login_here: 'Влезте тук'
 
+
+# error.html.twig
+
+error_page:
+    title: 'Грешка'
+    title_defaults: 'Неизвестна грешка'
+    status_text: 'Възникна грешка'
+    description: 'Съжаляваме, но възникна неочаквана грешка.'
+    advise: 'Моля, опитайте отново по-късно или се свържете с нас, ако проблемът продължава.'
+    button_start: 'Към началната страница'
+    button_profile: 'Към профила'
 
 
 
