add calendar improvement and timezone migration   Major changes:   - Migrate all datetime fields to TIMESTAMPTZ (timezone-aware)   - Add read-only mode for past dates in barber calendar   - Fix excluded slots counting in total available slots   - Add backend validation to prevent editing past dates   - Past dates show original status with lock icon   - Add USER_GUIDE.md documentation   - Add manager barber schedules management   - Multiple UI/UX improvements

--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -39,7 +39,11 @@ homepage:
 base_iframe:
     title: 'Барбершоп'
 
-    # _appointment_table.html.twig
+footer:
+    developed_by: 'Разработено от'
+    all_rights: 'Всички права запазени'
+
+# _appointment_table.html.twig
 
 appointment_table:
     appointment_empty: 'Все още нямате записани часове.'
@@ -145,7 +149,6 @@ register:
     have_account: 'Вече имате профил?'
     login_here: 'Влезте тук'
 
-
 # error.html.twig
 
 error_page:
@@ -157,7 +160,27 @@ error_page:
     button_start: 'Към началната страница'
     button_profile: 'Към профила'
 
-    
+# error403.html.twig
+
+error403:
+    title: "Достъпът е отказан - 403"
+    heading: "Достъпът е отказан"
+    description: "Нямате необходимите права за достъп до тази страница."
+    advice: "Ако смятате, че това е грешка, моля свържете се с администратор."
+    button_home: "Към началната страница"
+    button_profile: "Към профила"
+    button_login: "Вход"
+
+# error404.html.twig
+
+error404:
+    title: "Страницата не е намерена - 404"
+    heading: "Страницата не е намерена"
+    description: "Страницата, която търсите, не съществува или е била премахната."
+    advice: "Проверете дали адресът е въведен правилно или се върнете към началната страница."
+    button_home: "Към началната страница"
+    button_appointment: "Запази час"
+
 # check_email.html.twig
 
 check_email:
@@ -300,15 +323,12 @@ password_changed:
     confirmation: "Потвърждаваме, че паролата за вашия профил в <strong>Barber Shop</strong> беше променена успешно."
     success_label: "Успешно"
     success_text: "Вашата нова парола е активна и можете да я използвате за вход в системата."
-
     security_header: "Важно за вашата сигурност"
     security_warning: "Ако <strong>НЕ сте поискали</strong> тази промяна, моля незабавно се свържете с нас на:"
-
     tips_header: "Съвети за сигурност"
     tip_unique: "Използвайте уникална парола, която не сте използвали на други сайтове"
     tip_no_share: "Никога не споделяйте паролата си с други"
     tip_change_often: "Променяйте паролата си периодично"
-
     regards: "Поздрави,"
     team: "Екипът на Barber Shop"
 
@@ -372,10 +392,8 @@ reminder:
     title: "⏰ Напомняне за вашия час утре"
     hello: "Здравейте"
     message: "Това е приятелско напомняне, че имате запазен час в <strong>Barber Shop</strong> утре!"
-
     dont_forget: "Не забравяйте!"
     appointment_time: "Вашият час е утре в"
-
     details_title: "Детайли за вашия час"
     date: "Дата"
     time: "Час"
@@ -383,24 +401,17 @@ reminder:
     service: "Услуга"
     duration: "Продължителност"
     price: "Цена"
-
     minutes: "мин."
     currency: "лв."
-
     preparation_title: "Подготовка"
     preparation_text: "Моля, пристигнете 5 минути по-рано. Ако имате нужда от допълнителни услуги, можете да ги обсъдите директно с бръснаря."
-
     cancel_header: "Трябва да отмените"
     cancel_text: "Ако не можете да дойдете, моля отменете часа си навреме от вашия профил или се свържете с нас."
-
     view_appointment: "Преглед на часа"
-
     see_you: "Очакваме ви с нетърпение утре!"
     regards: "Поздрави,"
     team: "Екипът на Barber Shop"
-
     auto_notice: "Това е автоматично напомняне, изпратено 24 часа преди вашия час."
-
 
 
 # appointment_confirmation.html.twig
@@ -410,22 +421,17 @@ confirm:
     hello: "Здравейте"
     message: "Вашият час в <strong>Barber Shop</strong> е успешно потвърден!"
     details_title: "📅 Детайли за вашия час"
-
     date: "Дата"
     time: "Час"
     barber: "Бръснар"
     service: "Услуга"
     duration: "Продължителност"
     price: "Цена"
-
     minutes: "мин."
     currency: "лв."
-
     important: "ℹ️ Важно"
     important_text: "Моля, бъдете на време. Ако имате нужда да отмените или промените часа си, можете да го направите от вашия профил или да се свържете с нас."
-
     view_appointments: "Вижте вашите часове"
-
     see_you: "Очакваме ви с нетърпение!"
     regards: "Поздрави,"
     team: "Екипът на Barber Shop"
@@ -435,19 +441,14 @@ confirm:
 cancel:
     title: "❌ Вашият час е отменен"
     hello: "Здравейте"
-
     by_barber: "Съжаляваме, но вашият час в <strong>Barber Shop</strong> беше отменен от бръснаря."
     by_manager: "Вашият час в <strong>Barber Shop</strong> беше отменен от мениджъра/администратора."
     general: "Вашият час в <strong>Barber Shop</strong> беше отменен успешно."
-
     details_title: "Детайли за отменения час"
-
     date: "Дата"
     time: "Час"
     barber: "Бръснар"
     service: "Услуга"
-
-    # Day names
     sun: "Неделя"
     mon: "Понеделник"
     tue: "Вторник"
@@ -455,56 +456,376 @@ cancel:
     thu: "Четвъртък"
     fri: "Петък"
     sat: "Събота"
-
-    # Warning block
     warning: "Внимание"
     extra_warning: "Този час беше отменен от %who%. Ако имате въпроси или желаете да резервирате нов час, моля свържете се с нас."
-
     by_barber_short: "бръснаря"
     by_manager_short: "мениджъра"
-
-    # Book new appointment block
     book_new_title: "Искате да резервирате друг час?"
     book_new_text: "Лесно можете да направите нова резервация от нашия сайт."
     book_new_button: "Резервирай нов час"
-
     thanks: "Благодарим за разбирането!"
     regards: "Поздрави,"
     team: "Екипът на Barber Shop"
-
-    # Footer contact
     questions: "За въпроси"
     phone: "Телефон"
 
 
+# client/profile.html.twig
+
+profile:
+    title: "Моят профил - Barber Shop"
+    hero_title: "Моят профил"
+    tabs:
+        profile: "Моят профил"
+        history: "История"
+        appointments: "Записани часове"
+        history_title: "История на посещения"
+    form:
+        email: "Имейл"
+        first_name: "Име"
+        last_name: "Фамилия"
+        nickname_help: "По желание. Ако е празно ще използваме вашето име."
+        phone: "Телефон"
+        member_since: "Член от"
+    password:
+        title: "Промяна на парола"
+        important: "Важно"
+        info: "При попълване на полетата за парола, ще получите имейл с линк за потвърждение. Паролата ще бъде сменена след потвърждение."
+        current: "Текуща парола"
+        new: "Нова парола"
+        repeat: "Повтори новата парола"
+        hint: "Минимум 6 символа"
+    actions:
+        back: "Обратно към начало"
+        save: "Запази промените"
+    appointments:
+        filters:
+            from_date: "От дата"
+            to_date: "До дата"
+            status: "Статус"
+        actions:
+            filter: "Филтрирай"
+            clear: "Изчисти"
+            edit: "Промяна на час"
+            cancel: "Отмяна на час"
+        results: "Показани %shown% от %total% записа"
+        per_page: "Показвай"
+        table:
+            date: "Дата"
+            time: "Час"
+            barber: "Бръснар"
+            service: "Услуга"
+            status: "Статус"
+            price: "Цена"
+            actions: "Действия"
+        empty: "Няма записани часове за избрания период."
+        status:
+            pending: "Чакащи"
+            confirmed: "Потвърден"
+            completed: "Завършен"
+            completed_done: "Изпълнен"
+            cancelled: "Отменен"
+            no_show: "Недошъл"
+        currency: "лв"
+    history:
+        filters:
+            from_date: "От дата"
+            to_date: "До дата"
+            status: "Статус"
+        actions:
+            filter: "Филтрирай"
+            clear: "Изчисти"
+            edit: "Промяна на час"
+            cancel: "Отмяна на час"
+        results: "Показани %shown% от %total% записа"
+        per_page: "Показвай"
+        table:
+            date: "Дата"
+            time: "Час"
+            barber: "Бръснар"
+            service: "Услуга"
+            status: "Статус"
+            price: "Цена"
+            actions: "Действия"
+        empty: "Няма записани часове за избрания период."
+        status:
+            pending: "Чакащи"
+            confirmed: "Потвърден"
+            completed: "Завършен"
+            completed_done: "Изпълнен"
+            cancelled: "Отменен"
+            no_show: "Недошъл"
+        currency: "лв"
 
 
+# appointment.html.twig
+
+appointment:
+    title: "Запазете час - Barber Shop"
+    hero_title: "Запазете час"
+    section:
+        choose_range: "Изберете часовия диапазон, в който желаете да запазите своя час."
+    guest:
+        title: "Вашите данни за контакт"
+        first_name: "Име"
+        first_name_placeholder: "Въведете вашето име"
+        last_name: "Фамилия"
+        last_name_placeholder: "Въведете вашата фамилия"
+        email: "Имейл"
+        phone: "Телефон"
+        phone_placeholder: "+359 888 123 456"
+        gdpr: "Съгласен съм с обработката на личните ми данни съгласно <a href=\"#\" target=\"_blank\">Privacy Policy</a>"
+    procedure:
+        title: "Изберете услуга"
+        placeholder: "Изберете услуга..."
+    date:
+        title: "Дата"
+    days:
+        sun: "Неделя"
+        mon: "Понеделник"
+        tue: "Вторник"
+        wed: "Сряда"
+        thu: "Четвъртък"
+        fri: "Петък"
+        sat: "Събота"
+    loading_slots: "Зареждане на свободни часове..."
+    actions:
+        submit: "Запази час"
+    hint:
+        select_service_time: "Изберете услуга и час за да продължите"
+    profile_incomplete:
+        title: "Завършете профила си"
+        text: "Моля, попълнете информацията за профила си преди да запазите час."
+        button: "Завърши профил"
+
+# go_back_logout_buttons.html.twig
+
+common:
+    actions:
+        go_back: "Назад"
+        logout: "Изход"
 
 
+# barber/profile.html.twig
 
+barber:
+    edit:
+        title: "Редактиране на профил - Barber Shop"
+        hero: "Моят профил"
+    tabs:
+        calendar: "График"
+        appointments: "Записани часове"
+        procedures: "Услуги"
+        history: "История"
+        profile: "Моят профил"
+    calendar:
+        prev: "Предишен"
+        next: "Следващ"
+        legend:
+            available: "Свободен"
+            partial: "Частично зает"
+            full: "Напълно зает"
+            unavailable: "Не работя"
+        weekdays:
+            mon: "Пон"
+            tue: "Вто"
+            wed: "Сря"
+            thu: "Чет"
+            fri: "Пет"
+            sat: "Съб"
+            sun: "Нед"
+        day_off: "Почивен"
+    appointments:
+        title: "Записани часове"
+        filters:
+            from_date: "От дата"
+            to_date: "До дата"
+            status: "Статус"
+        status:
+            pending: "Чакащи"
+            confirmed: "Потвърдени"
+            completed: "Завършени"
+            cancelled: "Отменени"
+        search:
+            label: "Търси клиент"
+            placeholder: "Име, имейл, телефон..."
+        actions:
+            filter: "Филтрирай"
+            clear: "Изчисти"
+        results: "Показани %shown% от %total% записа"
+        per_page: "Показвай"
+    procedures:
+        title: "Услуги, които извършвам"
+        description: "Изберете услугите, които можете да извършвате. Клиентите ще виждат само вас, когато изберат тази услуга."
+        price: "Цена"
+        duration: "Време"
+        minutes: "мин"
+        currency: "лв"
+        actions:
+            save: "Запази промените"
+    history:
+        title: "История на посещения"
+        table:
+            date: "Дата"
+            time: "Час"
+            barber: "Бръснар"
+            service: "Услуга"
+            status: "Статус"
+            price: "Цена"
+            actions: "Действия"
+        empty: "Няма история на посещения."
+        status:
+            confirmed: "Потвърден"
+            completed: "Изпълнен"
+            cancelled: "Отменен"
+            no_show: "Недошъл"
+        currency: "лв"
+    schedule:
+        loading: "Зареждане..."
+        working_day: "Работя този ден"
+        start: "Начало"
+        end: "Край"
+        slots: "Часове"
+        reason: "Причина (по желание)"
+        reason_placeholder: "напр. Лична причина, Отпуск, и т.н."
+        actions:
+            cancel: "Отказ"
+            save: "Запази"
 
+# barber/calendar.html.twig
 
+calendar:
+    title: "График"
+    prev: "Предишен"
+    next: "Следващ"
+    legend:
+        available: "Свободен"
+        partial: "Частично зает"
+        full: "Напълно зает"
+        unavailable: "Не работя"
+    weekdays:
+        mon: "Пон"
+        tue: "Вто"
+        wed: "Сря"
+        thu: "Чет"
+        fri: "Пет"
+        sat: "Съб"
+        sun: "Нед"
+    day_off: "Почивен"
+    schedule:
+        loading: "Зареждане..."
+        working_day: "Работя този ден"
+        start: "Начало"
+        end: "Край"
+        slots: "Часове"
+        reason: "Причина (по желание)"
+        reason_placeholder: "напр. Лична причина, Отпуск, и т.н."
+        actions:
+            cancel: "Отказ"
+            save: "Запази"
 
+# admin/users
 
+admin:
+    users:
+        actions:
+            edit: "Редакция"
+roles:
+    role_user: "Потребител"
+    role_admin: "Администратор"
+    role_editor: "Редактор"
+    role_super_admin: "Супер администратор"
 
+# admin/user_edit.html.twig
 
+user_edit:
+    title: "Редактиране на профил - Barber Shop"
+    hero_admin: "Редактиране на потребител"
+    hero_user: "Моят профил"
+    form:
+        email: "Имейл"
+        email_placeholder: "example@email.com"
+        first_name: "Име"
+        first_name_placeholder: "Име"
+        last_name: "Фамилия"
+        last_name_placeholder: "Фамилия"
+        nickname: "Прякор"
+        nickname_placeholder: "Прякор"
+        phone: "Телефон"
+        phone_placeholder: "+359 888 123 456"
+    admin_section:
+        title: "Администраторски настройки"
+        roles: "Роли"
+        date_added: "Дата на регистрация"
+        date_banned: "Дата на ban"
+        date_updated: "Последна промяна"
+    actions:
+        save: "Запази промените"
+        go_back_home: "Обратно към начало"
 
+# procedures.html.twig
 
+procedures:
+    title: "Управление на услуги"
+    confirm_delete: "Сигурни ли сте, че искате да изтриете тази услуга?"
+    yes: "Да"
+    no: "Не"
+    not_available: "н/п"
+    actions:
+        edit: "Редакция"
+        delete: "Изтриване"
 
+# procedures_forms.html.twig
 
+procedures_forms:
+    title: "Управление на услуги"
 
+# admin/dashboard.html.twig
 
+dashboard:
+    hello: "Здравей"
+    admin_menu:
+        title: "Администраторско меню"
+        list_clients: "Списък с клиенти"
+        list_barbers: "Списък с бръснари"
+        list_without_roles: "Без роли"
+        procedure_panel: "Панел с услуги"
 
+# manager/dashboard.html.twig
 
-
-
-
-
-
-
-
-
-
+manager_dashboard:
+    title: "Табло на Мениджъра"
+    subtitle: "Преглед на резервации и операции"
+    nav:
+        dashboard: "Табло"
+        all_appointments: "Всички резервации"
+        barber_schedules: "Графици на бръснари"
+    stats:
+        today: "Днес"
+        confirmed: "Потвърдени"
+        completed: "Завършени"
+        this_week: "Тази седмица"
+        this_month: "Този месец"
+        total_appointments: "Общо резервации"
+        barbers: "Барбъри"
+        active_barbers: "Активни служители"
+    today:
+        title: "Днешни резервации"
+        empty: "Няма резервации за днес."
+    table:
+        time: "Час"
+        client: "Клиент"
+        barber: "Барбър"
+        service: "Услуга"
+        duration: "Продължителност"
+        status: "Статус"
+    status:
+        confirmed: "Потвърден"
+        completed: "Завършен"
+        cancelled: "Отменен"
+    actions:
+        view_all: "Виж всички резервации"
+    minutes: "мин"
 
 
 
